--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Frontend Pro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
+  <link type="image/png" sizes="16x16" rel="icon" href="/favicon.png">
 </head>
 
 <body>
